--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
       <div class="banner__strip">
         <div class="banner__strip__card">
-          <img src="/images/banner-3.jpg" alt="banner" />
+          <img src="/banner-3.jpg" alt="banner" />
           <div>Great<br />Cafe Racer</div>
         </div>
         <div class="banner__strip__card">
