--- a/index.html
+++ b/index.html
@@ -65,27 +65,27 @@
       </div>
       <div class="banner__strip">
         <div class="banner__strip__card">
-          <img src="/banner-3.jpg" alt="banner" />
+          <img src="/images/banner-3.jpg" alt="banner" />
           <div>Great<br />Cafe Racer</div>
         </div>
         <div class="banner__strip__card">
-          <img src="/images/ფოტოები/banner-4.jpg" alt="banner" />
+          <img src="/images/fotos/banner-4.jpg" alt="banner" />
           <div>Yamaha<br />X10000</div>
         </div>
         <div class="banner__strip__card">
-          <img src="/images/banner-5.jpg" alt="banner" />
+          <img src="/images/fotos/banner-5.jpg" alt="banner" />
           <div>Custom Made<br />Scrambler</div>
         </div>
         <div class="banner__strip__card">
-          <img src="/images/ფოტოები/banner-6.jpg" alt="banner" />
+          <img src="/images/fotos/banner-6.jpg" alt="banner" />
           <div>Motercycle Gears<br />And Wears</div>
         </div>
         <div class="banner__strip__card">
-          <img src="/images/ფოტოები/banner-7.jpg" alt="banner" />
+          <img src="/images/fotos/banner-7.jpg" alt="banner" />
           <div>Custom<br />Modification</div>
         </div>
         <div class="banner__strip__card">
-          <img src="/images/ფოტოები/banner-8.jpg" alt="banner" />
+          <img src="/images/fotos/banner-8.jpg" alt="banner" />
           <div>Cool Jwellery<br />For Bikers</div>
         </div>
       </div>
@@ -125,7 +125,7 @@
             </div>
           </div>
           <div class="feature__video">
-            <video src="/images/ფოტოები/feature.mp4" muted loop autoplay></video>
+            <video src="/images/fotos/feature (1).mp4" muted loop autoplay></video>
           </div>
         </div>
       </div>
@@ -135,7 +135,7 @@
       <div class="section__header">Latest Blog</div>
       <div class="blog__grid">
         <div class="blog__card">
-          <img src="/images/ფოტოები/blog-1.jpg" alt="blog" />
+          <img src="/images/fotos/blog-1.jpg" alt="blog" />
           <div class="blog__header">
             <h4>Spotlight Series: Iconic Bikes and Their Legacy</h4>
             <div class="blog__card__footer">
@@ -159,7 +159,7 @@
           </div>
         </div>
         <div class="blog__card">
-          <img src="/images/ფოტოები/blog-2.jpg" alt="blog" />
+          <img src="/images/fotos/blog-2.jpg" alt="blog" />
           <div class="blog__header">
             <h4>Restoration Chronicles: Bringing Classics Back to Life</h4>
             <div class="blog__card__footer">
@@ -182,7 +182,7 @@
           </div>
         </div>
         <div class="blog__card">
-          <img src="/images/ფოტოები/blog-3.jpg" alt="blog" />
+          <img src="/images/fotos/blog-3.jpg" alt="blog" />
           <div class="blog__header">
             <h4>Style Revival: Fashion and Gear for the Classic Rider</h4>
             <div class="blog__card__footer">
@@ -211,16 +211,16 @@
     <section class="instagram__container">
       <div class="section__header">Instagram</div>
       <div class="instagram__flex">
-        <img src="/images/ფოტოები/instagram-1.jpg" alt="instagram" />
-        <img src="/images/ფოტოები/instagram-2.jpg" alt="instagram" />
-        <img src="/images/ფოტოები/instagram-3.jpg" alt="instagram" />
-        <img src="/images/ფოტოები/instagram-4.jpg" alt="instagram" />
-        <img src="/images/ფოტოები/instagram-5.jpg" alt="instagram" />
-        <img src="/images/ფოტოები/instagram-6.jpg" alt="instagram" />
-        <img src="/images/ფოტოები/instagram-7.jpg" alt="instagram" />
-        <img src="/images/ფოტოები/instagram-8.jpg" alt="instagram" />
-        <img src="/images/ფოტოები/instagram-9.jpg" alt="instagram" />
-        <img src="images/ფოტოები/instagram-10.jpg" alt="instagram" />
+        <img src="/images/fotos/instagram-1.jpg" alt="instagram" />
+        <img src="/images/fotos/instagram-2.jpg" alt="instagram" />
+        <img src="/images/fotos/instagram-3.jpg" alt="instagram" />
+        <img src="/images/fotos/instagram-4.jpg" alt="instagram" />
+        <img src="/images/fotos/instagram-5.jpg" alt="instagram" />
+        <img src="/images/fotos/instagram-6.jpg" alt="instagram" />
+        <img src="/images/fotos/instagram-7.jpg" alt="instagram" />
+        <img src="/images/fotos/instagram-8.jpg" alt="instagram" />
+        <img src="/images/fotos/instagram-9.jpg" alt="instagram" />
+        <img src="/images/fotos/instagram-10.jpg" alt="instagram" />
       </div>
     </section>
 
