--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="login.css" />
     <title>Web Design Mastery | Classic Motorcycles</title>
   </head>
   <body>
     <header class="header" id="home">
       <nav>
         <div class="nav__bar">
-          <div class="nav__logo">
+          <div class="av__logo">
             <img src="logo.png" alt="logo" />
           </div>
           <div class="nav__menu__btn" id="menu-btn">
@@ -211,7 +211,7 @@
     <section class="instagram__container">
       <div class="section__header">Instagram</div>
       <div class="instagram__flex">
-        <img src="/instagram-1.png" alt="instagram" />
+        <img src="instagram-1.png" alt="instagram" />
         <img src="/instagram-2.png" alt="instagram" />
         <img src="/instagram-3.png" alt="instagram" />
         <img src="/instagram-4.png" alt="instagram" />
@@ -264,53 +264,86 @@
         <i class="ri-arrow-up-s-line"></i><span>TOP</span>
       </a>
     </footer>
-  <footer>
-    <div class="page">
-      <div class="container">
-        <div class="left">
-          <div class="login">შესვლა</div>
-          <div class="eula">By logging in you agree to the ridiculously long terms that you didn't bother to read</div>
-        </div>
-        <div class="right">
-          <svg viewBox="0 0 320 300">
-            <defs>
-              <linearGradient
-                              inkscape:collect="always"
-                              id="linearGradient"
-                              x1="13"
-                              y1="193.49992"
-                              x2="307"
-                              y2="193.49992"
-                              gradientUnits="userSpaceOnUse">
-                <stop
-                      style="stop-color:#ff00ff;"
-                      offset="0"
-                      id="stop876" />
-                <stop
-                      style="stop-color:#ff0000;"
-                      offset="1"
-                      id="stop878" />
-              </linearGradient>
-            </defs>
-            <path d="m 40,120.00016 239.99984,-3.2e-4 c 0,0 24.99263,0.79932 25.00016,35.00016 0.008,34.20084 -25.00016,35 -25.00016,35 h -239.99984 c 0,-0.0205 -25,4.01348 -25,38.5 0,34.48652 25,38.5 25,38.5 h 215 c 0,0 20,-0.99604 20,-25 0,-24.00396 -20,-25 -20,-25 h -190 c 0,0 -20,1.71033 -20,25 0,24.00396 20,25 20,25 h 168.57143" />
-          </svg>
-          <div class="form">
-            <label for="email">გმაილი</label>
-            <input type="email" id="email">
-            <label for="password">პაროლი</label>
-            <input type="password" id="password">
-            <input type="submit" id="submit" value="შესვლა">
+    <footer>
+      <div class="page">
+        <div class="container">
+          <div class="left">
+            <div class="login">შესვლა</div>
+            <div class="eula">
+              By logging in you agree to the ridiculously long terms that you
+              didn't bother to read
+            </div>
+          </div>
+          <div class="right">
+            <svg viewBox="0 0 320 300">
+              <defs>
+                <linearGradient
+                  inkscape:collect="always"
+                  id="linearGradient"
+                  x1="13"
+                  y1="193.49992"
+                  x2="307"
+                  y2="193.49992"
+                  gradientUnits="userSpaceOnUse"
+                >
+                  <stop style="stop-color: #ff00ff" offset="0" id="stop876" />
+                  <stop style="stop-color: #ff0000" offset="1" id="stop878" />
+                </linearGradient>
+              </defs>
+              <path
+                d="m 40,120.00016 239.99984,-3.2e-4 c 0,0 24.99263,0.79932 25.00016,35.00016 0.008,34.20084 -25.00016,35 -25.00016,35 h -239.99984 c 0,-0.0205 -25,4.01348 -25,38.5 0,34.48652 25,38.5 25,38.5 h 215 c 0,0 20,-0.99604 20,-25 0,-24.00396 -20,-25 -20,-25 h -190 c 0,0 -20,1.71033 -20,25 0,24.00396 20,25 20,25 h 168.57143"
+              />
+            </svg>
+            <div class="form">
+              <label for="email">გმაილი</label>
+              <input type="email" id="email" />
+              <label for="password">პაროლი</label>
+              <input type="password" id="password" />
+              <input type="submit" id="submit" value="შესვლა" />
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    
-  </footer>
+    </footer>
 
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="index.js"></script>
+    <script>
+      // <![CDATA[  <-- For SVG support
+      if ('WebSocket' in window) {
+        (function () {
+          function refreshCSS() {
+            var sheets = [].slice.call(document.getElementsByTagName("link"));
+            var head = document.getElementsByTagName("head")[0];
+            for (var i = 0; i < sheets.length; ++i) {
+              var elem = sheets[i];
+              var parent = elem.parentElement || head;
+              parent.removeChild(elem);
+              var rel = elem.rel;
+              if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
+                var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
+                elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
+              }
+              parent.appendChild(elem);
+            }
+          }
+          var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
+          var address = protocol + window.location.host + window.location.pathname + '/ws';
+          var socket = new WebSocket(address);
+          socket.onmessage = function (msg) {
+            if (msg.data == 'reload') window.location.reload();
+            else if (msg.data == 'refreshcss') refreshCSS();
+          };
+          if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
+            console.log('Live reload enabled.');
+            sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
+          }
+        })();
+      }
+      else {
+        console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
+      }
+      // ]]>
+    </script>
   </body>
 </html>
-
-
-
