--- a/index.html
+++ b/index.html
@@ -211,16 +211,16 @@
     <section class="instagram__container">
       <div class="section__header">Instagram</div>
       <div class="instagram__flex">
-        <img src="instagram-1.png" alt="instagram" />
-        <img src="/instagram-2.png" alt="instagram" />
-        <img src="/instagram-3.png" alt="instagram" />
-        <img src="/instagram-4.png" alt="instagram" />
-        <img src="/instagram-5.png" alt="instagram" />
-        <img src="/instagram-6.png" alt="instagram" />
-        <img src="/instagram-7.png" alt="instagram" />
-        <img src="/instagram-8.png" alt="instagram" />
-        <img src="/instagram-9.png" alt="instagram" />
-        <img src="/instagram-10.png" alt="instagram" />
+        <img src="/instagram-1.png" alt="instagram">
+        <img src="/instagram-2.png" alt="instagram">
+        <img src="/instagram-3.png" alt="instagram">
+        <img src="/instagram-4.png" alt="instagram">
+        <img src="/instagram-5.png" alt="instagram">
+        <img src="/instagram-6.png" alt="instagram">
+        <img src="/instagram-7.png" alt="instagram">
+        <img src="/instagram-8.png" alt="instagram">
+        <img src="/instagram-9.png" alt="instagram">
+        <img src="/instagram-10.png" alt="instagram">
       </div>
     </section>
 
@@ -295,7 +295,7 @@
               />
             </svg>
             <div class="form">
-              <label for="email">გმაილი</label>
+              <label for="email">ელფოსტა</label>
               <input type="email" id="email" />
               <label for="password">პაროლი</label>
               <input type="password" id="password" />
@@ -305,45 +305,19 @@
         </div>
       </div>
     </footer>
+    <footer class="error__404">
+      <div class="error__container">
+        <h2>404 - Page Not Found</h2>
+        <p>The page you are looking for might have been removed or is temporarily unavailable.</p>
+        <a href="#home" class="error__link">
+          <i class="ri-arrow-left-line"></i><span>Back to Home</span>
+        </a>
+      </div>
+    </footer>
 
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="index.js"></script>
-    <script>
-      // <![CDATA[  <-- For SVG support
-      if ('WebSocket' in window) {
-        (function () {
-          function refreshCSS() {
-            var sheets = [].slice.call(document.getElementsByTagName("link"));
-            var head = document.getElementsByTagName("head")[0];
-            for (var i = 0; i < sheets.length; ++i) {
-              var elem = sheets[i];
-              var parent = elem.parentElement || head;
-              parent.removeChild(elem);
-              var rel = elem.rel;
-              if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
-                var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
-                elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
-              }
-              parent.appendChild(elem);
-            }
-          }
-          var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
-          var address = protocol + window.location.host + window.location.pathname + '/ws';
-          var socket = new WebSocket(address);
-          socket.onmessage = function (msg) {
-            if (msg.data == 'reload') window.location.reload();
-            else if (msg.data == 'refreshcss') refreshCSS();
-          };
-          if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
-            console.log('Live reload enabled.');
-            sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
-          }
-        })();
-      }
-      else {
-        console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
-      }
-      // ]]>
-    </script>
+  
+         
   </body>
 </html>
