--- a/index.html
+++ b/index.html
@@ -65,27 +65,27 @@
       </div>
       <div class="banner__strip">
         <div class="banner__strip__card">
-          <img src="/banner-3.png" alt="banner" />
+          <img src="banner-3.png" alt="banner" />
           <div>Great<br />Cafe Racer</div>
         </div>
         <div class="banner__strip__card">
-          <img src="/banner-4.png" alt="banner" />
+          <img src="banner-4.png" alt="banner" />
           <div>Yamaha<br />X10000</div>
         </div>
         <div class="banner__strip__card">
-          <img src="/banner-5.png" alt="banner" />
+          <img src="banner-5.png" alt="banner" />
           <div>Custom Made<br />Scrambler</div>
         </div>
         <div class="banner__strip__card">
-          <img src="/banner-6.png" alt="banner" />
+          <img src="banner-6.png" alt="banner" />
           <div>Motercycle Gears<br />And Wears</div>
         </div>
         <div class="banner__strip__card">
-          <img src="/banner-7.png" alt="banner" />
+          <img src="banner-7.png" alt="banner" />
           <div>Custom<br />Modification</div>
         </div>
         <div class="banner__strip__card">
-          <img src="/banner-8.png" alt="banner" />
+          <img src="banner-8.png" alt="banner" />
           <div>Cool Jwellery<br />For Bikers</div>
         </div>
       </div>
@@ -211,16 +211,16 @@
     <section class="instagram__container">
       <div class="section__header">Instagram</div>
       <div class="instagram__flex">
-        <img src="/instagram-1.png" alt="instagram">
-        <img src="/instagram-2.png" alt="instagram">
-        <img src="/instagram-3.png" alt="instagram">
-        <img src="/instagram-4.png" alt="instagram">
-        <img src="/instagram-5.png" alt="instagram">
-        <img src="/instagram-6.png" alt="instagram">
-        <img src="/instagram-7.png" alt="instagram">
-        <img src="/instagram-8.png" alt="instagram">
-        <img src="/instagram-9.png" alt="instagram">
-        <img src="/instagram-10.png" alt="instagram">
+        <img src="instagram-1.png" alt="instagram">
+        <img src="instagram-2.png" alt="instagram">
+        <img src="instagram-3.png" alt="instagram">
+        <img src="instagram-4.png" alt="instagram">
+        <img src="instagram-5.png" alt="instagram">
+        <img src="instagram-6.png" alt="instagram">
+        <img src="instagram-7.png" alt="instagram">
+        <img src="instagram-8.png" alt="instagram">
+        <img src="instagram-9.png" alt="instagram">
+        <img src="instagram-10.png" alt="instagram">
       </div>
     </section>
 
