--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </div>
           </div>
           <div class="feature__video">
-            <video src="/feature (1).png" muted loop autoplay></video>
+            <video src="./feature (1).png" muted loop autoplay></video>
           </div>
         </div>
       </div>
@@ -135,7 +135,7 @@
       <div class="section__header">Latest Blog</div>
       <div class="blog__grid">
         <div class="blog__card">
-          <img src="/blog-1.png" alt="blog" />
+          <img src="blog-1.png" alt="blog" />
           <div class="blog__header">
             <h4>Spotlight Series: Iconic Bikes and Their Legacy</h4>
             <div class="blog__card__footer">
@@ -211,16 +211,16 @@
     <section class="instagram__container">
       <div class="section__header">Instagram</div>
       <div class="instagram__flex">
-        <img src="instagram-1.png" alt="instagram">
-        <img src="instagram-2.png" alt="instagram">
-        <img src="instagram-3.png" alt="instagram">
-        <img src="instagram-4.png" alt="instagram">
-        <img src="instagram-5.png" alt="instagram">
-        <img src="instagram-6.png" alt="instagram">
-        <img src="instagram-7.png" alt="instagram">
-        <img src="instagram-8.png" alt="instagram">
-        <img src="instagram-9.png" alt="instagram">
-        <img src="instagram-10.png" alt="instagram">
+        <img src=".instagram-1.png" alt="instagram">
+        <img src=".instagram-2.png" alt="instagram">
+        <img src=".instagram-3.png" alt="instagram">
+        <img src=".instagram-4.png" alt="instagram">
+        <img src=".instagram-5.png" alt="instagram">
+        <img src=".instagram-6.png" alt="instagram">
+        <img src=".instagram-7.png" alt="instagram">
+        <img src=".instagram-8.png" alt="instagram">
+        <img src=".instagram-9.png" alt="instagram">
+        <img src=".instagram-10.png" alt="instagram">
       </div>
     </section>
 
