--- a/index.html
+++ b/index.html
@@ -65,27 +65,27 @@
       </div>
       <div class="banner__strip">
         <div class="banner__strip__card">
-          <img src="banner-3.png" alt="banner" />
+          <img src=".banner-3.png" alt="banner" />
           <div>Great<br />Cafe Racer</div>
         </div>
         <div class="banner__strip__card">
-          <img src="banner-4.png" alt="banner" />
+          <img src=".banner-4.png" alt="banner" />
           <div>Yamaha<br />X10000</div>
         </div>
         <div class="banner__strip__card">
-          <img src="banner-5.png" alt="banner" />
+          <img src=".banner-5.png" alt="banner" />
           <div>Custom Made<br />Scrambler</div>
         </div>
         <div class="banner__strip__card">
-          <img src="banner-6.png" alt="banner" />
+          <img src=".banner-6.png" alt="banner" />
           <div>Motercycle Gears<br />And Wears</div>
         </div>
         <div class="banner__strip__card">
-          <img src="banner-7.png" alt="banner" />
+          <img src=".banner-7.png" alt="banner" />
           <div>Custom<br />Modification</div>
         </div>
         <div class="banner__strip__card">
-          <img src="banner-8.png" alt="banner" />
+          <img src=".banner-8.png" alt="banner" />
           <div>Cool Jwellery<br />For Bikers</div>
         </div>
       </div>
@@ -135,7 +135,7 @@
       <div class="section__header">Latest Blog</div>
       <div class="blog__grid">
         <div class="blog__card">
-          <img src="blog-1.png" alt="blog" />
+          <img src=".blog-1.png" alt="blog" />
           <div class="blog__header">
             <h4>Spotlight Series: Iconic Bikes and Their Legacy</h4>
             <div class="blog__card__footer">
@@ -159,7 +159,7 @@
           </div>
         </div>
         <div class="blog__card">
-          <img src="/blog-2.png" alt="blog" />
+          <img src=".blog-2.png" alt="blog" />
           <div class="blog__header">
             <h4>Restoration Chronicles: Bringing Classics Back to Life</h4>
             <div class="blog__card__footer">
@@ -182,7 +182,7 @@
           </div>
         </div>
         <div class="blog__card">
-          <img src="/blog-3.png" alt="blog" />
+          <img src=".blog-3.png" alt="blog" />
           <div class="blog__header">
             <h4>Style Revival: Fashion and Gear for the Classic Rider</h4>
             <div class="blog__card__footer">
