--- a/index.html
+++ b/index.html
@@ -298,8 +298,10 @@
               <label for="email">ელფოსტა</label>
               <input type="email" id="email" />
               <label for="password">პაროლი</label>
-              <input type="password" id="password" />
+              <input type="password" value="FakePSW" id="myInput">
+              <input type="checkbox" onclick="myFunction()">
               <input type="submit" id="submit" value="შესვლა" />
+              <input type="password" id="password" />
             </div>
           </div>
         </div>
