--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/login.css" />
     <title>Web Design Mastery | Classic Motorcycles</title>
   </head>
   <body>
@@ -16,7 +16,7 @@
       <nav>
         <div class="nav__bar">
           <div class="av__logo">
-            <img src="logo.png" alt="logo" />
+            <img src="./images/logo.png" alt="logo" />
           </div>
           <div class="nav__menu__btn" id="menu-btn">
             <i class="ri-menu-line"></i>
@@ -28,7 +28,7 @@
           <li><a href="#about">About</a></li>
           <li class="nav__logo">
             <a href="#">
-              <img src="logo.png" alt="logo" />
+              <img src="./images/logo.png" alt="logo" />
             </a>
           </li>
           <li><a href="#feature">Feature</a></li>
@@ -61,31 +61,31 @@
         <div class="banner__card">
           <h4>Services & Repairs</h4>
         </div>
-        <img src="logo.png" alt="logo" />
+        <img src="/images/logo.png" alt="logo" />
       </div>
       <div class="banner__strip">
         <div class="banner__strip__card">
-          <img src="./banner-3.png" alt="banner" />
+          <img src="./images/banner-3.png" alt="banner" />
           <div>Great<br />Cafe Racer</div>
         </div>
         <div class="banner__strip__card">
-          <img src="./banner-4.png" alt="banner" />
+          <img src="./images/banner-4.png" alt="banner" />
           <div>Yamaha<br />X10000</div>
         </div>
         <div class="banner__strip__card">
-          <img src="./banner-5.png" alt="banner" />
+          <img src="./images/banner-5.png" alt="banner" />
           <div>Custom Made<br />Scrambler</div>
         </div>
         <div class="banner__strip__card">
-          <img src="./banner-6.png" alt="banner" />
+          <img src="./images/banner-6.png" alt="banner" />
           <div>Motercycle Gears<br />And Wears</div>
         </div>
         <div class="banner__strip__card">
-          <img src="./banner-7.png" alt="banner" />
+          <img src="./images/banner-7.png" alt="banner" />
           <div>Custom<br />Modification</div>
         </div>
         <div class="banner__strip__card">
-          <img src="./banner-8.png" alt="banner" />
+          <img src="./images/banner-8.png" alt="banner" />
           <div>Cool Jwellery<br />For Bikers</div>
         </div>
       </div>
@@ -125,7 +125,7 @@
             </div>
           </div>
           <div class="feature__video">
-            <video src="./feature (1).png" muted loop autoplay></video>
+            <video src="./images/feature (1).mp4" muted loop autoplay></video>
           </div>
         </div>
       </div>
@@ -135,7 +135,7 @@
       <div class="section__header">Latest Blog</div>
       <div class="blog__grid">
         <div class="blog__card">
-          <img src="./blog-1.png" alt="blog" />
+          <img src="./images/blog-1.png" alt="blog" />
           <div class="blog__header">
             <h4>Spotlight Series: Iconic Bikes and Their Legacy</h4>
             <div class="blog__card__footer">
@@ -159,7 +159,7 @@
           </div>
         </div>
         <div class="blog__card">
-          <img src="./blog-2.png" alt="blog" />
+          <img src="./images/blog-2.png" alt="blog" />
           <div class="blog__header">
             <h4>Restoration Chronicles: Bringing Classics Back to Life</h4>
             <div class="blog__card__footer">
@@ -182,7 +182,7 @@
           </div>
         </div>
         <div class="blog__card">
-          <img src="./blog-3.png" alt="blog" />
+          <img src="./images/blog-3.png" alt="blog" />
           <div class="blog__header">
             <h4>Style Revival: Fashion and Gear for the Classic Rider</h4>
             <div class="blog__card__footer">
@@ -211,23 +211,23 @@
     <section class="instagram__container">
       <div class="section__header">Instagram</div>
       <div class="instagram__flex">
-        <img src="./instagram-1.png" alt="instagram">
-        <img src="./instagram-2.png" alt="instagram">
-        <img src="./instagram-3.png" alt="instagram">
-        <img src="./instagram-4.png" alt="instagram">
-        <img src="./instagram-5.png" alt="instagram">
-        <img src="./instagram-6.png" alt="instagram">
-        <img src="./instagram-7.png" alt="instagram">
-        <img src="./instagram-8.png" alt="instagram">
-        <img src="./instagram-9.png" alt="instagram">
-        <img src="./instagram-10.png" alt="instagram">
+        <img src="./images/instagram-1.png" alt="instagram">
+        <img src="./images/instagram-2.png" alt="instagram">
+        <img src="./images/instagram-3.png" alt="instagram">
+        <img src="./images/instagram-4.png" alt="instagram">
+        <img src="./images/instagram-5.png" alt="instagram">
+        <img src="./images/instagram-6.png" alt="instagram">
+        <img src="./images/instagram-7.png" alt="instagram">
+        <img src="./images/instagram-8.png" alt="instagram">
+        <img src="./images/instagram-9.png" alt="instagram">
+        <img src="./images/instagram-10.png" alt="instagram">
       </div>
     </section>
 
     <footer class="footer" id="contact">
       <div class="section__container footer__container">
         <div class="footer__col">
-          <img src="logo.png" alt="logo" />
+          <img src="./images/logo.png" alt="logo" />
           <div class="footer__socials">
             <a href="#"><i class="ri-facebook-fill"></i></a>
             <a href="#"><i class="ri-twitter-fill"></i></a>
@@ -263,62 +263,22 @@
       <a href="#home" class="footer__bar__link">
         <i class="ri-arrow-up-s-line"></i><span>TOP</span>
       </a>
-    </footer>
-    <footer>
-      <div class="page">
-        <div class="container">
-          <div class="left">
-            <div class="login">შესვლა</div>
-            <div class="eula">
-              By logging in you agree to the ridiculously long terms that you
-              didn't bother to read
-            </div>
-          </div>
-          <div class="right">
-            <svg viewBox="0 0 320 300">
-              <defs>
-                <linearGradient
-                  inkscape:collect="always"
-                  id="linearGradient"
-                  x1="13"
-                  y1="193.49992"
-                  x2="307"
-                  y2="193.49992"
-                  gradientUnits="userSpaceOnUse"
-                >
-                  <stop style="stop-color: #ff00ff" offset="0" id="stop876" />
-                  <stop style="stop-color: #ff0000" offset="1" id="stop878" />
-                </linearGradient>
-              </defs>
-              <path
-                d="m 40,120.00016 239.99984,-3.2e-4 c 0,0 24.99263,0.79932 25.00016,35.00016 0.008,34.20084 -25.00016,35 -25.00016,35 h -239.99984 c 0,-0.0205 -25,4.01348 -25,38.5 0,34.48652 25,38.5 25,38.5 h 215 c 0,0 20,-0.99604 20,-25 0,-24.00396 -20,-25 -20,-25 h -190 c 0,0 -20,1.71033 -20,25 0,24.00396 20,25 20,25 h 168.57143"
-              />
-            </svg>
-            <div class="form">
-              <label for="email">ელფოსტა</label>
-              <input type="email" id="email" />
-              <label for="password">პაროლი</label>
-              <input type="password" value="FakePSW" id="myInput">
-              <input type="checkbox" onclick="myFunction()">
-              <input type="submit" id="submit" value="შესვლა" />
-              <input type="password" id="password" />
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
-    <footer class="error__404">
-      <div class="error__container">
-        <h2>404 - Page Not Found</h2>
-        <p>The page you are looking for might have been removed or is temporarily unavailable.</p>
-        <a href="#home" class="error__link">
-          <i class="ri-arrow-left-line"></i><span>Back to Home</span>
-        </a>
-      </div>
+      <div class="login"> 
+        <form name="myForm" onsubmit="return validateForm()" method="post">
+         <p>სახელი</p>
+      <input type="text" name="fname"><br>
+      <p>ელ-ფოსტა</p>
+      <input type="text" name="email"><br>
+   <input type="submit" value="გაგზავნა"></form>
+</div>
     </footer>
 
+    
+
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="index.js"></script>
+    <script src="/js/index.js"></script>
+    <script src="/js/accordion.js"></script>
+    <script src="/js/login.js"></script>
   
          
   </body>
