--- a/index.html
+++ b/index.html
@@ -281,9 +281,9 @@
     
 
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="/js/index.js"></script>
-    <script src="/js/accordion.js"></script>
-    <script src="/js/login.js"></script>
+    <script src="./js/index.js"></script>
+    <script src="./js/accordion.js"></script>
+    <script src="./js/login.js"></script>
   
          
   </body>
